# phoenix

./: .gitignore  README.md  readme.txt
ToTMimage/: run.bat  uploadtoqiniu.py
data_translator/: .gitignore  README.md  translate_title_chn.py
lululemon_scrapling/: .gitignore  README.md  install_scheduled_task.ps1  lululemon_url.txt  main.py  requirements.txt  run_scraper.cmd  run_scraper.ps1
patagonia_catalog/: .gitignore  Patagonia-女装url.xlsx  README.md  pyproject.toml  requirements.txt
patagonia_catalog/src/patagonia_scraper/: cli.py
patagonia_catalog/windows-deploy/: install_task.ps1  monitor.ps1  stop.ps1
patagonia_scrapling/: .gitignore  README.md  main.py
patagonia_scrapling2/: Patagonia-V8.2.xlsx  README.md  input_url.txt  main.py  会话记录.md  部署说明.md
patagonia_scrapling2/windows-deploy/: install.bat  stop.bat
patagonia_store_stock/: README.md  items.xlsx
sizeToimage/: pip command  qnfilelist.py
sizeToimage/01new/: run-exist.bat  run-new.bat  sizetoimageallnew.py
sizeToimage/02exist/: run-exist.bat  sizetoimageuseexist.py
src/: .env  items.xlsx  main.py  output.csv  output.xlsx  phoenix_crawler.yml  run.bat  test.py  test_selenium.py
src/constant/: brand.py  excel.py  shop.py  stock.py
src/exception/: TemplateError.py
src/util/: common_utils.py  crawler_util.py  date_util.py  env_util.py  excel_util.py  mail_util.py  size_utils.py  yaml_util.py
tianmao_dewu/: .env  main.py  test.py
tianmao_dewu/constant/: excel.py
tianmao_dewu/dict/: color_dict.py  size_dict.py
tianmao_dewu/service/: asics_service.py  coach_service.py  (+7 more)
(+48 files in other folders)
