[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "patagonia-jp-scraper"
version = "1.0.0"
description = "Patagonia Japan womens catalogue scraper powered by Scrapling"
requires-python = ">=3.10"
dependencies = [
  "scrapling[fetchers]>=0.4.11,<0.5",
  "playwright>=1.49",
  "openpyxl>=3.1,<4",
]

[project.scripts]
patagonia-scrape = "patagonia_scraper.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
